--- a/activity.html
+++ b/activity.html
@@ -83,9 +83,11 @@
                 // Step 3 contour generator
 
                 const colors = d3.scaleLinear()
-                    .domain([minThreshold, (maxThreshold + minThreshold) / 2,  maxThreshold])
+                    .domain(d3.range(minThreshold, maxThreshold, (maxThreshold - minThreshold) / 6))
                     .range(["#0d1a50", "#3e5eba", "#2b83ba", "#abdda4", "#ffffbf", "#fdae61", "#d7191c"])
                     .interpolate(d3.interpolateHcl);
+
+                svg.selectAll(".contours").remove();
 
 
                 let contours = d3.contours()
